--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,2 @@
-FIREBASE_KEY=AIzaSyBL9ga1gbdXfZ_-Uz_lx8nMlBALaMlai-8
+NEXT_PUBLIC_FIREBASE_KEY="AIzaSyBL9ga1gbdXfZ_-Uz_lx8nMlBALaMlai-8"
+BASE_URL="http://18.183.161.3:8083"
